finished contacts page, fixed alignments

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ img {
     margin: 0 auto;
 }
 
+.card-body {
+    text-align: left
+}
+
 .card-text,
 .card-title {
     text-align: justify;
@@ -26,3 +30,4 @@ img {
     float: left;
     text-align: left;
 }
+
